@startuml

entity users {
  +id : uuid
  login : text
  password_hash : text
  balance : numeric
  created_at : timestamp
}

entity orders {
  +id : uuid
  number : text (unique)
  user_id : uuid
  status : text
  accrual : numeric
  uploaded_at : timestamp
  updated_at : timestamp
}

entity balance_operations {
  +id : uuid
  user_id : uuid
  order_number : text
  operation_type : text
  amount : numeric
  processed_at : timestamp
  created_at : timestamp
}

users ||--o{ orders
users ||--o{ balance_operations

@enduml